whitespace is now in the correct space

--- a/src/pages/page/page.module.scss
+++ b/src/pages/page/page.module.scss
@@ -21,6 +21,7 @@
     a.bible-verse {
       text-decoration: none;
     }
+    white-space: pre-line;
   }
 
   &__verse {
